--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
-
 /*---------- GENERAL -----------*/
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
     display: block;
@@ -23,8 +21,19 @@ html, body {
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Graffiti_Paint_Brush';
+    src: url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.eot');
+    src: url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.woff2') format('woff2'),
+    url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.woff') format('woff'),
+    url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.ttf') format('truetype'),
+    url('../fonts/Graffiti_Paint_Brush/graffitipaintbrush.svg#calendas_plusregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #container {
-    background-color: rgba(235, 227, 205, 0.6);
     overflow: hidden;
 }
 
@@ -32,31 +41,35 @@ a {
     text-decoration: none;
 }
 
+.scroll {
+    color: #fff;
+}
+
 button {
-    -webkit-box-shadow: 3px 4px 0px 0px #a5b076;
-    box-shadow: 3px 4px 0px 0px #a5b076;
-    background: -o-linear-gradient(top, #f5f1e6 5%, #b9d3c2 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #f5f1e6), to(#b9d3c2));
-    background: linear-gradient(to bottom, #f5f1e6 5%, #b9d3c2 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f1e6', endColorstr='#b9d3c2', GradientType=0);
-    background-color: #f5f1e6;
+    -webkit-box-shadow: 3px 4px 0px 0px #676d79;
+    box-shadow: 3px 4px 0px 0px #676d79;
+    background: -o-linear-gradient(top, #ecf4fc 5%, #9395a0 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ecf4fc), to(#9395a0));
+    background: linear-gradient(to bottom, #ecf4fc 5%, #9395a0 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ecf4fc', endColorstr='#9395a0', GradientType=0);
+    background-color: #ecf4fc;
     border-radius: 15px;
-    border: 1px solid #d6bcd6;
+    border: 1px solid #9395a0;
     display: inline-block;
     cursor: pointer;
-    color: rgb(218, 97, 97);
+    color: #d23934;
     font-size: 28px;
     font-weight: bold;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #f8c967;
+    text-shadow: 0 1px 0 #bcc1cf;
 }
 
 button:hover {
-    background: -o-linear-gradient(top, #b9d3c2 5%, #f5f1e6 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #b9d3c2), to(#f5f1e6));
-    background: linear-gradient(to bottom, #b9d3c2 5%, #f5f1e6 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b9d3c2', endColorstr='#f5f1e6', GradientType=0);
-    background-color: #b9d3c2;
+    background: -o-linear-gradient(top, #9395a0 5%, #ecf4fc 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #9395a0), to(#ecf4fc));
+    background: linear-gradient(to bottom, #9395a0 5%, #ecf4fc 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9395a0', endColorstr='#ecf4fc', GradientType=0);
+    background-color: #ecf4fc;
 }
 
 button:active {
@@ -83,36 +96,48 @@ header {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    background-color: rgb(165, 176, 118);
+    background-color: #d23934;
     font-family: 'calendas_plusregular', Arial, sans-serif;
     text-align: center;
     width: 100%;
     height: 100px;
-    margin-bottom: 50px;
     z-index: 100;
-    box-shadow: 1px 0 50px rgba(82, 55, 53, 0.9);
-    -webkit-box-shadow: 1px 0 50px rgba(82, 55, 53, 0.9);
-    -moz-box-shadow: 1px 0 50px rgba(82, 55, 53, 0.9);
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .4);
+    -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .4);
     position: fixed;
-    color: #523735;
+    color: #fff;
 }
 
 #logo {
     margin: auto;
     width: 70px;
-    height: 70px;
+    height: auto;
+}
+
+#logo img {
+    width: 100%;
 }
 
 h1 {
     margin: auto;
     font-size: 42px;
+    line-height: 100px;
+}
+
+h1, h2 {
     text-shadow: 1px 1px 0 rgb(235, 227, 205), 4px 4px 0 rgba(82, 55, 53, 0.25);
 }
 
-header p {
-    margin: auto;
-    font-size: 24px;
-    color: #523735;
+h2 {
+    color: #fff;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 200;
+}
+
+h1, h2, h3 {
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
 }
 
 /*---------- NAVIGATION -----------*/
@@ -140,12 +165,13 @@ nav ul li {
 
 nav a {
     padding-right: 15px;
-    color: #ebe3cd;
+    color: #fff;
     font-size: 24px;
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
 }
 
 nav a:hover {
-    color: #da6161;
+    color: #000;
 }
 
 /*Dropdown menu*/
@@ -154,6 +180,15 @@ nav #dropdown {
 }
 
 /*---------- SLIDER -----------*/
+#section {
+    padding-top: 250px;
+    padding-bottom: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../img/background/location-velo-Lyon-application-javascript-2560x1707.jpeg);
+    background-attachment: fixed;
+}
+
 #slides-container {
     height: 600px;
     display: -webkit-box;
@@ -170,8 +205,7 @@ nav #dropdown {
     -ms-flex-align: center;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-    margin-top: 150px;
-    margin-bottom: 50px;
+    padding-top: 50px;
 }
 
 #slides {
@@ -197,7 +231,7 @@ nav #dropdown {
 
 .slide img {
     height: auto;
-    width: auto;
+    width: 100%;
     border-radius: 10px / 10px;
     box-shadow: 0 14px 28px rgba(82, 55, 53, 0.25), 0 10px 10px rgba(82, 55, 53, 0.22);
     -webkit-box-shadow: 0 14px 28px rgba(82, 55, 53, 0.25), 0 10px 10px rgba(82, 55, 53, 0.22);
@@ -226,7 +260,6 @@ nav #dropdown {
     flex-wrap: nowrap;
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
-    margin-top: 64px;
 }
 
 #map {
@@ -235,7 +268,7 @@ nav #dropdown {
 }
 
 #legend {
-    height: 128px;
+    height: 256px;
     margin: 0;
     display: -webkit-box;
     display: flex;
@@ -250,11 +283,18 @@ nav #dropdown {
     align-items: center;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-    color: #523735;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    background-image: url(../img/background/mur.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: bottom;
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
 }
 
-#legend figcaption {
-    font-size: 24px;
+#legend h3 {
+    font-size: 26px;
+    font-weight: 200;
 }
 
 #legend div {
@@ -273,56 +313,56 @@ nav #dropdown {
     justify-content: space-around;
 }
 
+#legend div figure {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: auto;
+    padding: 15px;
+}
+
 .legendImg {
     height: 64px;
     width: 64px;
+    margin: 0 auto;
+    display: block;
 }
 
 /*---------- Loader ----------*/
 #loading {
-    color: #523735;
+    color: #fff;
     margin: 150px auto;
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
 }
 
 #loading p {
     font-size: 24px;
     text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #loading div {
     font-size: 20px;
-    color: #523735;
     text-align: center;
 }
 
 .loader .bar {
-    width: 200px;
-    height: 25px;
-    border: 3px solid #f3eee1;
-    border-radius: 7px / 7px;
-    -moz-border-radius: 7px / 7px;
-    -webkit-border-radius: 7px / 7px;
-    margin: 150px auto;
+    width: 350px;
+    height: 86px;
+    border-bottom: 3px solid #fff;
+    margin: 125px auto;
     position: relative;;
     font-size: 20px;
-}
-
-.loader .bar:after {
-    content: "Chargement...";
-    color: #523735;
-    position: absolute;
-    left: 18%;
-    top: 150%;
+    overflow: hidden;
 }
 
 .loader .bar .sphere {
     display: block;
-    width: 25px;
+    width: 100%;
     height: 100%;
-    background: #f3eee1;
-    border-radius: 50%;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
+    background-image: url("../img/logo.png");
+    background-repeat: no-repeat;
     animation: sliderLoader 1.75s infinite ease-in-out alternate;
     -moz-animation: sliderLoader 1.75s infinite ease-in-out alternate;
     -webkit-animation: sliderLoader 1.75s infinite ease-in-out alternate;
@@ -332,13 +372,13 @@ nav #dropdown {
 
 @-webkit-keyframes sliderLoader {
     to {
-        margin-left: 89%;
+        margin-left: 55%;
     }
 }
 
 @keyframes sliderLoader {
     to {
-        margin-left: 89%;
+        margin-left: 55%;
     }
 }
 
@@ -346,8 +386,8 @@ nav #dropdown {
 #bookingContainer {
     height: 600px;
     width: 620px;
-    background-color: rgba(165, 176, 118, 0.6);
-    color: #fdfcf8;
+    background-color: #d23934;
+    color: #fff;
 }
 
 .details-station-none {
@@ -381,11 +421,12 @@ nav #dropdown {
 #stationDetails h3 {
     text-align: center;
     font-size: 22px;
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
 }
 
 #stationDetails div {
     font-size: 20px;
-    color: #523735;
+    color: #fff;
     text-align: center;
 }
 
@@ -406,7 +447,7 @@ nav #dropdown {
     display: none;
     width: 90%;
     height: 160px;
-    border: solid rgba(82, 55, 53, 0.8) 1px;
+    border: solid rgba(210, 57, 52, 0.8) 1px;
     margin: 20px auto;
     border-radius: 10px / 10px;
 }
@@ -418,7 +459,6 @@ nav #dropdown {
 
 .section-canvas {
     height: 500px;
-    width: 450px;
     display: -webkit-box;
     display: flex;
     display: -ms-flexbox;
@@ -436,17 +476,17 @@ nav #dropdown {
 }
 
 #titre-canvas {
-    background-color: #b9d3c2;
+    background-color: rgba(210, 57, 52, 0.7);
     width: 100%;
     text-align: center;
-    color: rgb(131, 23, 21);
-    border-bottom: 2px solid #a5b076;
+    color: #fff;
+    border-bottom: 2px solid #d23934;
 }
 
 #canvas {
     background-color: #ebeff3;
-    border: solid #a5b076 3px;
-    cursor: crosshair;
+    border: solid #d23934 3px;
+    cursor: url("../cursor/Grey-Spray.cur") 0 0, pointer;
 }
 
 #canvasBtn {
@@ -480,13 +520,12 @@ nav #dropdown {
 
 #contract {
     font-size: 16px;
-    color: #da6161;
+    color: #fff;
     text-decoration: underline;
 }
 
 /*---------- TIMER ----------*/
 #timerSection {
-    margin-bottom: 64px;
     width: 100%;
     height: 256px;
     display: -webkit-box;
@@ -505,7 +544,14 @@ nav #dropdown {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    background-color: rgb(223, 210, 174);
+    background-image: url('../img/background/trottoir.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: top;
+    color: #fff;
+    font-family: 'Graffiti_Paint_Brush', sans-serif;
+    padding: 25px 10px;
+    margin-top: -1px;
 }
 
 #timer {
@@ -517,8 +563,7 @@ nav #dropdown {
     -webkit-box-direction: normal;
     flex-direction: column;
     -ms-flex-direction: column;
-    color: #523735;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 #pTimer, #endTimerMessage, #cancelBtn, #signDivElt {
@@ -526,8 +571,8 @@ nav #dropdown {
 }
 
 #minutes, #seconds {
-    color: #da6161;
-    font-size: 28px;
+    color: #d23934;
+    font-size: 32px;
 }
 
 #cancelBtn {
@@ -544,7 +589,7 @@ nav #dropdown {
     width: 175px;
     height: 100px;
     background-color: #ebeff3;
-    border: solid #523735 3px;
+    border: solid #d23934 3px;
 }
 
 #imgSignature {
@@ -554,7 +599,7 @@ nav #dropdown {
 
 /*---------- FOOTER -----------*/
 footer {
-    background-color: rgb(165, 176, 118);
+    background-color: #d23934;
     width: 100%;
     height: 90px;
     display: -webkit-box;
@@ -573,16 +618,15 @@ footer {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    text-align: center;
 }
 
 footer, footer a {
-    color: #523735;
+    color: #fff;
 }
 
 /*---------- POP-UP CONTRACT -----------*/
 #contract-container {
-    background-color: rgba(235, 227, 205, 0.6);
-    color: #523735;
     overflow: hidden;
 }
 
@@ -603,13 +647,13 @@ footer, footer a {
 #signatureModal {
     width: 116px;
     height: 66px;
-    background-color: #ebeff3;
-    border: solid #523735 3px;
+    background-color: #fff;
+    border: solid #d23934 3px;
 }
 
 #modalLink {
     font-size: 16px;
-    color: #da6161;
+    color: #d23934;
     text-decoration: underline;
     text-align: center;
 }
@@ -629,16 +673,20 @@ footer, footer a {
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #f3eee1;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
+    background-image: url("../img/background/mur-modal.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 5% auto; /* 5% from the top and centered */
+    padding: 25px;
+    border: 1px solid #d23934;
+    color: #000;
+    font-size: 20px;
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-    color: rgba(82, 55, 53, 0.7);
+    color: #d23934;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -652,7 +700,7 @@ footer, footer a {
 
 /*---------- MENTIONS LEGALES ----------*/
 #legalNotice a {
-    color: #cb6d61;
+    color: #d23934;
 }
 
 .display-none {
@@ -660,12 +708,6 @@ footer, footer a {
 }
 
 /*---------- MEDIA QUERIES -----------*/
-@media (min-width: 992px) and (max-width: 1199px) {
-    #paragraphe1 {
-        font-size: 16px
-    }
-}
-
 @media (max-width: 1024px) {
     #mapSection {
         flex-wrap: wrap;
@@ -673,10 +715,9 @@ footer, footer a {
         -ms-flex-wrap: wrap;
     }
 
-    #reservation-container {
+    #bookingContainer {
         width: 100%;
         height: auto;
-        margin-top: 50px;
     }
 
     #sectionCanvas {
@@ -696,15 +737,6 @@ footer, footer a {
 }
 
 @media (max-width: 992px) {
-    /*header*/
-    #paragraphe1 {
-        display: none;
-    }
-
-    h1 {
-        margin: 20px auto;
-    }
-
     /*Dropdown menu*/
     nav ul {
         display: none;
@@ -716,7 +748,7 @@ footer, footer a {
 
     #dropbtn, #dropbtn-close {
         background-color: #EBEFF3;
-        color: rgb(218, 97, 97);
+        color: #d23934;
         font-size: 16px;
         border-radius: 5px / 5px;
         border-color: #EBEFF3;
@@ -733,7 +765,7 @@ footer, footer a {
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #523735;
+        background-color: #d23934;
         width: 100%;
         -webkit-box-shadow: 0px 8px 16px 0px rgba(82, 55, 53, 0.2);
         box-shadow: 0px 8px 16px 0px rgba(82, 55, 53, 0.2);
@@ -747,7 +779,7 @@ footer, footer a {
     }
 
     #dropdown-content a:hover {
-        background-color: #da6161;
+        background-color: #d23934;
         color: #523735;
     }
 
@@ -764,6 +796,16 @@ footer, footer a {
 
     #stationDetails p {
         font-size: 36px;
+    }
+
+    #legend {
+        height: auto;
+        min-height: 256px;
+    }
+
+    #timerSection {
+        height: auto;
+        min-height: 256px;
     }
 }
 
@@ -785,12 +827,6 @@ footer, footer a {
         width: 100%;
     }
 
-}
-
-@media screen and (max-width: 800px) {
-    #timerSection {
-        height: 320px;
-    }
 }
 
 @media screen and (max-width: 600px) {
@@ -816,14 +852,6 @@ footer, footer a {
 
     #prev, #next {
         width: 85px;
-    }
-
-    #legend {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        flex-direction: column;
-        -ms-flex-direction: column;
-        height: 320px;
     }
 
     #legend > div {
